# sphinx_essearch

./: .gitignore  pyproject.toml
sphinx_essearch/: __main__.py  build.py  handle.py  preview.py  search.py
sphinx_essearch/handler/: common.py  fs_handler.py
sphinx_essearch/templates/: __init__.py  search.html  search_body.html
