[tool.poetry]
name = "sphinx-essearch"
version = "0.1.0"
description = ""
authors = ["yamachi"]
packages = [{include = "sphinx_essearch"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.49"
SQLAlchemy = "^1.4.49"
python-dotenv = "^1.0.0"
opensearch-py = "^2.3.1"
sphinxcontrib-websupport = "^1.2.6"
sphinx = "^7.2.6"
flask = "^2.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.5.1"
black = "^23.9.1"
pyproject-flake8 = "^6.0.0.post1"
boto3-stubs = {extras = ["essential"], version = "^1.28.49"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
ignore = "E203"
